@@ -21,7 +21,6 @@ import stroom.job.api.ScheduledJob;
 import stroom.job.shared.Job;
 import stroom.security.api.SecurityContext;
 import stroom.security.shared.AppPermission;
-import stroom.util.AuditUtil;
 import stroom.util.shared.CriteriaFieldSort;
 import stroom.util.shared.ResultPage;
 
@@ -32,6 +31,7 @@ import jakarta.inject.Singleton;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -76,21 +76,21 @@ class JobService {
             final Optional<Job> before = fetch(job.getId());
 
             // We always want to update a job instance even if we have a stale version.
-            before.ifPresent(j -> job.setVersion(j.getVersion()));
+            final Integer version = before.map(Job::getVersion).orElse(job.getVersion());
 
-            AuditUtil.stamp(securityContext, job);
-            final Job after = jobDao.update(job);
+            final Job after = jobDao.update(job.copy().version(version).stampAudit(securityContext).build());
             return decorate(after);
         });
     }
 
     ResultPage<Job> find(final FindJobCriteria findJobCriteria) {
-        final ResultPage<Job> results = securityContext.secureResult(AppPermission.MANAGE_JOBS_PERMISSION,
+        ResultPage<Job> results = securityContext.secureResult(AppPermission.MANAGE_JOBS_PERMISSION,
                 () -> jobDao.find(findJobCriteria));
-        results.getValues().forEach(this::decorate);
+        final List<Job> list = results.getValues().stream().map(this::decorate).toList();
+        results = new ResultPage<>(list, results.getPageResponse());
 
         if (!findJobCriteria.getSortList().isEmpty()) {
-            final CriteriaFieldSort sort = findJobCriteria.getSortList().get(0);
+            final CriteriaFieldSort sort = findJobCriteria.getSortList().getFirst();
             if (sort.getId().equals(FindJobCriteria.FIELD_ADVANCED)) {
                 results.getValues().sort(Comparator.comparing(Job::isAdvanced).thenComparing(Job::getName));
             }
@@ -104,9 +104,10 @@ class JobService {
     }
 
     Job decorate(final Job job) {
-        job.setDescription(jobDescriptionMap.get(job.getName()));
-        job.setAdvanced(jobAdvancedSet.contains(job.getName()));
-        return job;
+        return job.copy()
+                .description(jobDescriptionMap.get(job.getName()))
+                .advanced(jobAdvancedSet.contains(job.getName()))
+                .build();
     }
 
     int setJobsEnabledForNode(final String nodeName,
